# Projeto_1-PI-20202-GAB

./: README.txt
ProjetoPI 1/: graph_barras.py  graph_linha.py  interface_grafica_qt.py  primeira_tela.ui  pyproject.toml  sample-line.csv  terminal_main.py
